--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name:          Code Guide by @AlloyTeam
+name:          Code Guide by @omwteam
 description:   Standards for developing flexible, durable, and sustainable HTML and CSS, and maintainable JavaScript
-url:           https://github.com/AlloyTeam/CodeGuide
+url:           https://github.com/omwteam/codeGuide
 
 include:       [".editorconfig", ".jscsrc", ".jshintrc", ".csslintrc", ".scss-lint.yml"]
 
